--- a/src/main/resources/templates/joinForm.html
+++ b/src/main/resources/templates/joinForm.html
@@ -1,54 +1,129 @@
 <!DOCTYPE html>
-<html
-        xmlns:th="http://www.thymeleaf.org"
-        xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
->
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Register</title>
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="shortcut icon" href="/images/favicon.ico">
-    <link rel="stylesheet" href="/css/styles.css">
-    <link rel="stylesheet" href="style.css">
+    <title>가입하기 · instagram</title>
     <style>
-        .container {
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+        }
+
+        body {
             display: flex;
             justify-content: center;
-            text-align: center;
             align-items: center;
-            height: 60vh;
+            height: 100vh;
+            background-color: #fafafa;
+        }
+
+        .signup-container {
+            width: 100%;
+            max-width: 350px;
+            padding: 40px;
+            background-color: #fff;
+            border: 1px solid #dbdbdb;
+            text-align: center;
+        }
+
+        .signup-container h1 {
+            font-family: 'Billabong', cursive;
+            font-size: 48px;
+            margin-bottom: 20px;
+        }
+
+        .signup-form {
+            display: flex;
+            flex-direction: column;
+        }
+
+        .signup-form input {
+            margin-bottom: 10px;
+            padding: 10px;
+            border: 1px solid #dbdbdb;
+            border-radius: 3px;
+            font-size: 14px;
+            background-color: #fafafa;
+        }
+
+        .signup-form input:focus {
+            outline: none;
+            border-color: #a8a8a8;
+        }
+
+        .signup-form button {
+            padding: 10px;
+            border: none;
+            border-radius: 3px;
+            background-color: #3897f0;
+            color: #fff;
+            font-size: 14px;
+            cursor: pointer;
+        }
+
+        .signup-form button:hover {
+            background-color: #287ad6;
+        }
+
+        .info-text {
+            font-size: 12px;
+            color: #999;
+            margin-top: -10px;
+            margin-bottom: 20px;
+        }
+
+        .info-text a {
+            color: #3897f0;
+            text-decoration: none;
+        }
+
+        .info-text a:hover {
+            text-decoration: underline;
+        }
+
+        .login-link {
+            margin-top: 20px;
+        }
+
+        .login-link a {
+            color: #3897f0;
+            text-decoration: none;
+        }
+
+        .login-link a:hover {
+            text-decoration: underline;
+        }
+
+        @media (max-width: 600px) {
+            .signup-container {
+                margin: 20px;
+                padding: 20px;
+            }
         }
     </style>
 </head>
 <body>
-<div class="container">
-    <main id="login">
-        <div class="login__column" id="for__join">
-            <div class="login__box">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2a/Instagram_logo.svg/2560px-Instagram_logo.svg.png" width="150" height="80" /><br>
-                <span class="login__divider2"> 친구들의 사진과 동영상을 보려면 <br>가입하세요. </span>
-                <form action="/join" method="post">
-                    <div class="group">
-                        <input type = "text" name = "username" placeholder="Username"/> <br />
-                     <label>사용자 이름</label>
-                    </div>
-                    <div class="group">
-                        <input type="password" name="password" placeholder="Password"/> <br />
-                        <label>비밀번호</label>
-                    </div>
-                    <div class="group">
-                        <input type="email" name="email" placeholder="Email"/> <br />
-                        <label>이메일</label>
-                    </div>
-                    <button>회원가입</button>
-                </form>
-                <span class="login__divider2"> 가입하면 lnstagram의 약관, 데이터 <br>정책 및 쿠키 정책에 동의하게 됩니다. </span>
-            </div>
+<div class="signup-container">
+    <h1>Instagram</h1>
+    <div class="additional-text">
+        친구들의 사진과 동영상을 보려면 가입하세요.
+    </div>
+    <form class="signup-form" action="/join" method="post">
+        <input type="email" name="email" placeholder="이메일" required>
+        <input type="text" name="username" placeholder="사용자 이름" required>
+        <input type="password" name="password" placeholder="비밀번호" required>
+        <div class="info-text">
+            저희 서비스를 이용하는 사람이 회원님의 연락처 정보를 Instagram에 업로드했을 수도 있습니다.
+            <a href="https://www.facebook.com/help/instagram/261704639352628?next=https%3A%2F%2Fwww.instagram.com%2Faccounts%2Fregistered%2F%3F__coig_login%3D1" target="_blank">더 알아보기</a>
         </div>
-    </main>
+        <button>가입</button>
+    </form>
+    <div class="login-link">
+        <p>계정이 있으신가요? <a href="/user">로그인</a></p>
+    </div>
 </div>
 </body>
 </html>
