Test Faild : loginForm과 joinForm Fe구현

--- a/src/main/resources/templates/joinForm.html
+++ b/src/main/resources/templates/joinForm.html
@@ -122,7 +122,7 @@
         <button>가입</button>
     </form>
     <div class="login-link">
-        <p>계정이 있으신가요? <a href="/user">로그인</a></p>
+        <p>계정이 있으신가요? <a href="/loginForm">로그인</a></p>
     </div>
 </div>
 </body>
