--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -1,10 +1,57 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Instagram</title>
+    <style>
+        /* CSS 스타일링 */
+        .logo {
+            height: 50px;
+            width: auto;
+            cursor: pointer;
+        }
+        .home-btn {
+            cursor: pointer;
+            margin-right: 20px;
+            color: black;
+            text-decoration: none;
+            text-align: center;
+            font-size: 20px;
+            align-items: center;
+            line-height: 50px;
+        }
+        li {
+            list-style-type: none;
+            margin-right: 20px;
+        }
+        .home-image {
+            height: 30px;
+            width: 30px;
+        }
+    </style>
 </head>
 <body>
-$END$
+<!-- 헤더 부분 -->
+<header>
+    <!-- 현재 페이지로 이동하는 로고 이미지 -->
+    <a href="/home" onclick="window.location.href=window.location.origin+window.location.pathname">
+        <img src="https://blog.kakaocdn.net/dn/b5QczF/btrehC6dzmX/7VS9KZZIkBlYV2GKnuUGCK/img.png" alt="Logo" class="logo">
+    </a>
+    <ul>
+        <li>
+            <a href="/home" class="home-btn" onclick="window.location.href=window.location.origin+window.location.pathname">
+                <image src="https://www.nicepng.com/png/detail/937-9379647_png-file-svg-instagram-home-icon-vector.png" class="home-image">
+                </image>
+                홈
+            </a>
+            <a href="/create" class="create-btn" onclick="window.location.href=window.location.origin+window.location.pathname">
+                <image src="https://www.nicepng.com/png/detail/937-9379647_png-file-svg-instagram-home-icon-vector.png" class="home-image">
+                </image>
+                만들기
+            </a>
+        </li>
+    </ul>
+</header>
+<!-- 페이지 내용 -->
 </body>
 </html>
